ola-parser/src/testdata/syntaxTests/globalFunctions/now_deprecate.sol
contract C {
	fn f()  {
		now;
	}
}
// ----
// TypeError 7359: (38-41): "now" has been deprecated. Use "block.timestamp" instead.
